[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/playState/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0 )

[node name="Options" type="Node2D" parent="."]

[node name="SongName" type="Label" parent="."]
margin_left = -362.0
margin_top = 15.0
margin_right = 1262.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Test"
align = 2

[node name="DiffText" type="Label" parent="."]
margin_left = -362.0
margin_top = 47.0
margin_right = 1262.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "NORMAL"
align = 2

[node name="DeathsText" type="Label" parent="."]
margin_left = -362.0
margin_top = 79.0
margin_right = 1262.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "Blueballed: 0"
align = 2

[node name="PracticeModeText" type="Label" parent="."]
margin_left = -362.0
margin_top = 111.0
margin_right = 1262.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "PRACTICE MODE"
align = 2
